work app, finished tutorial

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,8 @@
             android:layout_gravity="center"
             android:scaleY="0.7"
             android:scaleX="0.7"
-            android:layout_marginHorizontal="-30dp"/>
+            android:layout_marginLeft="-30dp"
+            android:layout_marginRight="-30dp"/>
 
         <TimePicker
             android:id="@+id/timePicker"
@@ -63,7 +64,8 @@
             android:layout_gravity="center"
             android:scaleY="0.7"
             android:scaleX="0.7"
-            android:layout_marginHorizontal="-30dp"/>
+            android:layout_marginLeft="-30dp"
+            android:layout_marginRight="-30dp"/>
     </LinearLayout>
 
     <Button
